# lync.bet

./: README.md  backend spec.md  docker-compose.yml  specs.md
backend/: .env.example  Cargo.toml  Dockerfile  SPEC.md  backend spec.md
backend/migrations/: 001_initial_schema.sql
backend/src/: main.rs  types.rs
backend/src/routes/: actions.rs  leaderboard.rs  markets.rs  mod.rs  orders.rs  portfolio.rs
backend/src/services/: blockchain.rs  orderbook.rs  orders.rs
contracts/: SPEC.md  foundry.toml
contracts/script/: CreateMarket.s.sol  Deploy.s.sol
contracts/src/: MockUSDC.sol  OutcomeToken.sol  PredictionMarket.sol
contracts/test/: MockUSDC.t.sol  OutcomeToken.t.sol  PredectionMarket.t.sol
frontend/: SPEC.md
hello-tee/: .env  .gitignore  README.md  SPEC.md  package-lock.json  package.json  secrets.yaml
hello-tee/my-workflow/: .cre_build_tmp.js  helloWorld.ts  main.ts  workflow.yaml
hello-tee/my-workflow/config/: config.staging.json
lync-fe/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package.json  spec.md  vite.config.ts
lync-fe/src/: LyncBet.tsx  index.css  main.tsx
lync-fe/src/abi/: CollateralToken.json  PredictionMarket.json
lync-fe/src/app/: router.tsx
lync-fe/src/config/: api.ts  wagmi.ts
lync-fe/src/data/: mockActivity.json  mockChartData.json  mockMarkets.json  mockOrderBook.json  mockPositions.json  mockTrades.json
lync-fe/src/hooks/: useChartData.ts  useMarket.ts  useMarketExplorer.ts  useMarkets.ts  useSSE.ts  (+5 more)
watcher/: .dockerignore  .env.example  Dockerfile  SPEC.md
watcher/src/: events.rs  main.rs
(+51 files in other folders)
