[package]
name = "prediction-market-backend"
version = "0.1.0"
edition = "2021"
description = "Prediction Market Backend - Rust Axum"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "tls-native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Blockchain / Ethereum (ethers for mature EIP-712 + contract support)
ethers = { version = "2", features = ["abigen", "ws"] }

# Utilities
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
